[gd_scene load_steps=4 format=3 uid="uid://doxsfq0ylj0d2"]

[ext_resource type="Script" uid="uid://bxmfaf6w6ll3i" path="res://Scenes/Agents/agent_card.gd" id="1_agent_card"]
[ext_resource type="Theme" uid="uid://buofu5v88dxt1" path="res://Scenes/UI/Themes/terminal_window.tres" id="2_terminal_theme"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
ambient_light_source = 3
ambient_light_color = Color(0, 1, 0.8, 1)
ambient_light_energy = 0.3

[node name="AgentCard" type="Control"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_agent_card")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShapeContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="ShapeContainer"]
size = Vector2i(160, 80)

[node name="Camera3D" type="Camera3D" parent="ShapeContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1, 3)
fov = 50.0

[node name="ShapeNode" type="MeshInstance3D" parent="ShapeContainer/SubViewport"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="ShapeContainer/SubViewport"]
environment = SubResource("Environment_1")

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_terminal_theme")
theme_override_constants/separation = 8

[node name="AgentTypeLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Agent Type"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="StatsContainer" type="GridContainer" parent="InfoContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 2
columns = 2

[node name="AttackTimerBar" type="ProgressBar" parent="InfoContainer"]
layout_mode = 2
show_percentage = false

[node name="SpecialAttackLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Special Attack"
horizontal_alignment = 1

[node name="RecruitButton" type="Button" parent="InfoContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "RECRUIT $100"
